force-app/main/default/objects/ImageAnalysis__c/ImageAnalysis__c.object-meta.xml
<CustomObject>
    <label>ImageAnalysis</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AnalysisId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImageAnalysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>