force-app/main/default/objects/ImageAnalysis__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>