force-app/main/default/objects/ImageAnalysis__c/fields/Anger__c.field-meta.xml
<CustomField>
    <fullName>Anger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anger</label>
    <type>Checkbox</type>
</CustomField>