force-app/main/default/objects/ImageAnalysis__c/fields/Bald__c.field-meta.xml
<CustomField>
    <fullName>Bald__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bald</label>
    <type>Checkbox</type>
</CustomField>