force-app/main/default/objects/ImageAnalysis__c/fields/Beard__c.field-meta.xml
<CustomField>
    <fullName>Beard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beard</label>
    <type>Checkbox</type>
</CustomField>