force-app/main/default/objects/ImageAnalysis__c/fields/Contempt__c.field-meta.xml
<CustomField>
    <fullName>Contempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contempt</label>
    <type>Checkbox</type>
</CustomField>