force-app/main/default/objects/ImageAnalysis__c/fields/Disgust__c.field-meta.xml
<CustomField>
    <fullName>Disgust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disgust</label>
    <type>Checkbox</type>
</CustomField>