force-app/main/default/objects/ImageAnalysis__c/fields/Emotion__c.field-meta.xml
<CustomField>
    <fullName>Emotion__c</fullName>
    <label>Emotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>