force-app/main/default/objects/ImageAnalysis__c/fields/Emotion_Value__c.field-meta.xml
<CustomField>
    <fullName>Emotion_Value__c</fullName>
    <label>Emotion_Value</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>