force-app/main/default/objects/ImageAnalysis__c/fields/eyemakeup__c.field-meta.xml
<CustomField>
    <fullName>eyemakeup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eyemakeup</label>
    <type>Checkbox</type>
</CustomField>