force-app/main/default/objects/ImageAnalysis__c/fields/FaceHeight__c.field-meta.xml
<CustomField>
    <fullName>FaceHeight__c</fullName>
    <label>FaceHeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>