force-app/main/default/objects/ImageAnalysis__c/fields/FaceLeft__c.field-meta.xml
<CustomField>
    <fullName>FaceLeft__c</fullName>
    <label>FaceLeft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>