force-app/main/default/objects/ImageAnalysis__c/fields/FaceTop__c.field-meta.xml
<CustomField>
    <fullName>FaceTop__c</fullName>
    <label>FaceTop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>