force-app/main/default/objects/ImageAnalysis__c/fields/FaceWidth__c.field-meta.xml
<CustomField>
    <fullName>FaceWidth__c</fullName>
    <label>FaceWidth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>