force-app/main/default/objects/ImageAnalysis__c/fields/FacialHair__c.field-meta.xml
<CustomField>
    <fullName>FacialHair__c</fullName>
    <label>FacialHair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>