force-app/main/default/objects/ImageAnalysis__c/fields/Fear__c.field-meta.xml
<CustomField>
    <fullName>Fear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fear</label>
    <type>Checkbox</type>
</CustomField>