force-app/main/default/objects/ImageAnalysis__c/fields/Glasses__c.field-meta.xml
<CustomField>
    <fullName>Glasses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Glasses</label>
    <type>Checkbox</type>
</CustomField>