force-app/main/default/objects/ImageAnalysis__c/fields/Hair__c.field-meta.xml
<CustomField>
    <fullName>Hair__c</fullName>
    <label>Hair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>