force-app/main/default/objects/ImageAnalysis__c/fields/Haircolor__c.field-meta.xml
<CustomField>
    <fullName>Haircolor__c</fullName>
    <label>Haircolor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>