force-app/main/default/objects/ImageAnalysis__c/fields/Happiness__c.field-meta.xml
<CustomField>
    <fullName>Happiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Happiness</label>
    <type>Checkbox</type>
</CustomField>