force-app/main/default/objects/ImageAnalysis__c/fields/ImageHeight__c.field-meta.xml
<CustomField>
    <fullName>ImageHeight__c</fullName>
    <label>ImageHeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>