force-app/main/default/objects/ImageAnalysis__c/fields/ImageWidth__c.field-meta.xml
<CustomField>
    <fullName>ImageWidth__c</fullName>
    <label>ImageWidth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>