force-app/main/default/objects/ImageAnalysis__c/fields/lipmakeup__c.field-meta.xml
<CustomField>
    <fullName>lipmakeup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lipmakeup</label>
    <type>Checkbox</type>
</CustomField>