force-app/main/default/objects/ImageAnalysis__c/fields/MediaId__c.field-meta.xml
<CustomField>
    <fullName>MediaId__c</fullName>
    <label>MediaId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>