force-app/main/default/objects/ImageAnalysis__c/fields/Moustache__c.field-meta.xml
<CustomField>
    <fullName>Moustache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moustache</label>
    <type>Checkbox</type>
</CustomField>