force-app/main/default/objects/ImageAnalysis__c/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <externalId>true</externalId>
    <label>PersonId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>