force-app/main/default/objects/ImageAnalysis__c/fields/photodisplayurl__c.field-meta.xml
<CustomField>
    <fullName>photodisplayurl__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(URL__c, &#39;http://&#39;, &#39;https://&#39;), &quot;photos_post&quot;, &quot;&quot;)   &amp;  &#39;photo_display?name=&#39; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>photodisplayurl</label>
    <type>Text</type>
</CustomField>