force-app/main/default/objects/ImageAnalysis__c/fields/Sadness__c.field-meta.xml
<CustomField>
    <fullName>Sadness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sadness</label>
    <type>Checkbox</type>
</CustomField>