force-app/main/default/objects/ImageAnalysis__c/fields/Smile__c.field-meta.xml
<CustomField>
    <fullName>Smile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smile</label>
    <type>Checkbox</type>
</CustomField>