force-app/main/default/objects/ImageAnalysis__c/fields/Smile_value__c.field-meta.xml
<CustomField>
    <fullName>Smile_value__c</fullName>
    <label>Smile_value</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>