force-app/main/default/objects/ImageAnalysis__c/fields/Surprise__c.field-meta.xml
<CustomField>
    <fullName>Surprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surprise</label>
    <type>Checkbox</type>
</CustomField>