force-app/main/default/objects/ImageAnalysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Gender__c</columns>
    <columns>Hair__c</columns>
    <columns>Smile_value__c</columns>
    <columns>Emotion__c</columns>
    <columns>Emotion_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>