force-app/main/default/objects/ImageAnalysis__c/listViews/Women_Happy.listView-meta.xml
<ListView>
    <fullName>Women_Happy</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Smile_value__c</columns>
    <columns>Emotion__c</columns>
    <columns>Smile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>female</value>
    </filters>
    <filters>
        <field>Emotion__c</field>
        <operation>equals</operation>
        <value>happiness</value>
    </filters>
    <label>Women - Happy</label>
</ListView>